# IoT-Internet-of-Things

./: .gitignore  README.md
ESP32/: main.cpp  secrets.h
iot_project/: .env  Cargo.toml
iot_project/src/: db.rs  main.rs  models.rs
