[package]
name = "iot_project"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON e serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Banco de dados
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# MQTT
paho-mqtt = "0.12"

# Utilitários
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# (Opcional, mas útil se quiser manipular streams)
tokio-stream = "0.1"
